--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,706 +1,17 @@
-@charset "UTF-8";
-.loader {
-  /* création loader */
-  border: 10px solid #f3f3f3;
-  width: 200px;
-  height: 200px;
-  border-top: 10px solid #9356dc;
-  border-bottom: 10px solid #ff79da;
-  border-right: 10px solid #99e2d0;
-  border-left: 10px solid #99e2d0;
-  border-radius: 50%;
-  -webkit-animation: spin 1s linear 5s backwards;
-  -o-animation: spin 1s linear 5s backwards;
-  animation: spin 1s linear 5s backwards;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  background-color: white;
-  opacity: 0;
-  /* positionnement loader */
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
+/* Error: expected ";".
+ *   ,
+ * 3 | @import "./layout/accueil"
+ *   |                           ^
+ *   '
+ *   sass\main.scss 3:27  root stylesheet */
 
-/* animation loader */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 1;
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-  }
-}
-.btn {
-  max-width: 220px;
-  width: 60%;
-  height: 50px;
-  border: none;
-  border-radius: 50px;
-  color: white;
-  font-size: 0.9rem;
-  font-family: roboto;
-  background: linear-gradient(#ff79da, #9356dc);
-  box-shadow: 1px 1px 8px #d1d0d0;
-}
-
-.home-btn {
-  display: flex;
-  justify-content: center;
-  width: 60%;
-  padding-bottom: 57px;
-}
-
-.page-btn {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0 60px;
-}
-
-body {
-  width: 100%;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-header img {
-  padding: 30px 28% 12px;
-  width: 44%;
-  height: 30px;
-}
-
-.localisation {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  font-size: 1em;
-  font-weight: bold;
-  background-color: #eaeaea;
-}
-
-.fa-map-marker-alt {
-  padding-right: 20px;
-}
-
-.search {
-  width: 50%;
-  height: 80%;
-  font-size: 1.3rem;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  background: #eaeaea;
-  border: none;
-}
-
-::-webkit-input-placeholder {
-  color: black;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #f6f6f6;
-}
-
-form h1 {
-  display: flex;
-  text-align: center;
-  flex-wrap: wrap;
-  font-size: 1.36rem;
-  font-weight: bold;
-  font-family: roboto;
-  margin: 0;
-  padding: 43px 0 22px;
-}
-
-form p {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  padding: 0 0 34px 39px;
-  font-family: roboto;
-  font-size: 1rem;
-  margin: 0;
-}
-
-.btn {
-  height: 50px;
-  border: none;
-  border-radius: 50px;
-  color: white;
-  font-size: 0.9rem;
-  font-family: roboto;
-  background: linear-gradient(#ff79da, #9356dc);
-  box-shadow: 1px 1px 8px #d1d0d0;
-}
-
-.functioning-filter {
-  display: flex;
-  flex-direction: column;
-  padding: 0 20px;
-}
-
-.functioning-filter h2 {
-  font-family: roboto;
-  padding: 52px 0 32px 0;
-  margin: 0;
-}
-
-.functioning-filter ol {
-  list-style-type: none;
-  padding: 13px;
-  margin: 0;
-}
-
-ol li::before {
-  position: relative;
-  min-width: 25px;
-  width: 25px;
-  height: 25px;
-  border-radius: 25px;
-  content: "1";
-  color: white;
-  background: #9356dc;
-  display: inline-block;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  left: -11px;
-}
-
-.functioning-filter li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background: #f6f6f6;
-  max-width: 334px;
-  height: 75px;
-  border-radius: 20px;
-  margin-bottom: 25px;
-  box-shadow: 1px 1px 8px #d1d0d0;
-}
-
-.functioning-filter li:hover {
-  background: #f5edff;
-}
-
-.functioning-filter i {
-  color: #7e7e7e;
-}
-
-.functioning-filter li:hover > i {
-  color: #9356dc;
-}
-
-.fa-mobile-alt {
-  font-size: 1.3rem;
-  padding-left: 20px;
-  padding-right: 27px;
-}
-
-.fa-list-ul {
-  font-size: 1.2rem;
-  padding-left: 0;
-  padding-left: 20px;
-  padding-right: 21px;
-}
-
-.fa-store {
-  font-size: 0.8rem;
-  padding-left: 20px;
-  padding-right: 23px;
-}
-
-.functioning-filter p {
-  font-family: roboto;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-section {
-  padding: 0 20px 64px;
-  background: #f6f6f6;
-}
-
-section h2 {
-  font-family: roboto;
-  margin: 0;
-  padding: 59px 0 27px 0;
-}
-
-.restaurant-prev {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 250px;
-  border-radius: 20px;
-  margin-bottom: 13px;
-  box-shadow: 1px 1px 8px #d1d0d0;
-}
-
-.restaurant-prev span {
-  position: absolute;
-  top: 13px;
-  right: 13px;
-  background: #99e2d0;
-  color: #008766;
-  padding: 5px 10px;
-  border-radius: 2.5px;
-}
-
-.restaurant-prev img {
-  width: 100%;
-  height: 174px;
-  border-radius: 20px 20px 0px 0px;
-  object-fit: cover;
-}
-
-.restaurant-prev__description {
-  display: flex;
-  flex-direction: column;
-}
-
-.restaurant-prev__description h3 {
-  font-family: roboto;
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 20px 0 6px 15px;
-  margin: 0;
-}
-
-.restaurant-prev__description p {
-  font-family: roboto;
-  font-size: 1rem;
-  padding-left: 15px;
-  margin: 0;
-}
-
-.heart-icon {
-  position: absolute;
-  right: 0;
-  bottom: 20px;
-  padding: 22px 24px 0 0;
-  font-size: 1.7rem;
-  cursor: pointer;
-}
-
-.heart-icon i {
-  display: flex;
-  align-items: center;
-}
-
-.heart-empty {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  position: relative;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected ";".\a   \2577 \a 3 \2502  @import "./layout/accueil"\d\a   \2502                            ^\a   \2575 \a   sass\\main.scss 3:27  root stylesheet';
 }
-
-.heart-icon .heart-full {
-  display: none;
-  animation: increase 1500ms ease-in-out forwards;
-}
-
-.heart-icon:hover > .heart-full {
-  display: block;
-  background: linear-gradient(0, #9356dc, #ff79da);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.heart-icon:hover > .heart-empty {
-  display: none;
-}
-
-@keyframes increase {
-  0% {
-    transform: translateY(0.01em);
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-footer {
-  height: 197px;
-  background: #353535;
-  padding-left: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-footer h2 {
-  font-size: 1rem;
-  font-family: shrikhand;
-  color: white;
-  margin: 0;
-  padding: 26px 0 22px 0;
-}
-
-.footer__flex {
-  display: flex;
-  flex-direction: row;
-}
-
-footer i {
-  font-size: 1.25rem;
-  color: white;
-  padding-right: 9px;
-}
-
-.fa-hands-helping {
-  font-size: 0.9rem;
-}
-
-footer p {
-  font-family: roboto;
-  font-size: 1rem;
-  color: white;
-  margin: 0;
-  padding: 0 0 9px 0;
-}
-
-footer p a {
-  color: white;
-}
-
-@media only screen and (min-width: 768px) {
-  header img {
-    padding: 30px 0 12px 50px;
-    width: 300px;
-    box-shadow: none;
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    margin: 0 40px;
-  }
-
-  .localisation {
-    border-radius: 25px 25px 0 0;
-    box-shadow: none;
-  }
-
-  .search {
-    width: 20%;
-  }
-
-  form {
-    border-radius: 25px;
-  }
-
-  .functioning-filter {
-    padding: 0 40px;
-  }
-
-  .functioning-filter h2 {
-    padding: 0;
-    padding-top: 20px;
-  }
-
-  .functioning-filter ol {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 0;
-    padding-top: 20px;
-  }
-
-  .functioning-filter li {
-    width: 320px;
-    margin-right: 40px;
-    margin-bottom: 0;
-  }
-
-  section {
-    padding: 20px 40px;
-    background: white;
-  }
-
-  section h2 {
-    padding: 0;
-    padding-bottom: 20px;
-  }
-
-  article {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border-radius: 25px;
-    background: #f6f6f6;
-    padding-top: 40px;
-  }
-
-  .flex-card-tablet-and-desktop {
-    display: flex;
-    flex-direction: row;
-    padding: 0 40px 40px;
-  }
-
-  .flex-card {
-    width: 100%;
-    padding-right: 40px;
-  }
-
-  .restaurant-prev {
-    margin: 0;
-  }
-
-  footer {
-    margin: 0 40px 40px;
-    background: #353535;
-    border-radius: 25px;
-  }
-}
-/*Pages menu */
-.header-menu {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.header-menu a {
-  font-size: 1.5em;
-  padding: 30px 17% 12px 20px;
-}
-.header-menu img {
-  justify-content: center;
-  padding: 30px 25% 12px 0;
-}
-
-.menu--background {
-  position: relative;
-  margin-top: -47px;
-  border-radius: 50px 42px 0 0;
-  background: #f6f6f6;
-}
-
-.menu img {
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
-}
-
-.menu__description {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 33px;
-}
-
-.menu__description h1 {
-  font-size: 1.5rem;
-  font-family: shrikhand;
-  padding: 0 0 35px 19px;
-  margin: 0;
-}
-
-.heart--size {
-  height: 50%;
-  padding: 0 37px 0px 0;
-  font-size: 1.7rem;
-}
-
-.menu i {
-  width: 100%;
-  height: 100%;
-}
-
-.menu-list {
-  animation: slidedown 1s ease-in-out forwards;
-}
-
-@keyframes slidedown {
-  from {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-.menu-list h2 {
-  width: 13%;
-  font-family: roboto;
-  font-size: 1rem;
-  font-weight: normal;
-  padding-bottom: 8px;
-  margin: 0;
-  margin-left: 20px;
-  border-bottom: 2px solid #99e2d0;
-}
-
-.menu-list ul {
-  list-style-type: none;
-  padding: 14px 14px 25px;
-  margin: 0;
-}
-
-.menu-list ul li {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  height: 68px;
-  border-radius: 15px;
-  background: white;
-  margin-bottom: 15px;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: 1px 1px 8px #d1d0d0;
-}
-
-.menu-list__description {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 8px 10px 13px 10px;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.menu-list__description h3 {
-  width: 100%;
-  font-family: roboto;
-  font-size: 1em;
-  font-weight: bold;
-  margin: 0;
-}
-
-.description {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.menu-list__description p {
-  width: 50%;
-  font-size: 0.9rem;
-  margin: 0;
-  border: none;
-}
-
-.price {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.check-box {
-  display: none;
-  background-color: #99e2d0;
-  height: 68px;
-  border-radius: 0 15px 15px 0;
-  right: 0;
-  top: 0;
-  animation: slideleft 0.8s ease-in-out forwards;
-}
-
-.parent:hover > .check-box {
-  display: block;
-  width: 20%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.parent:hover > .check-box i {
-  font-size: 20px;
-  display: flex;
-}
-
-.parent:hover > .menu-list__description p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-@keyframes slideleft {
-  from {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-.check-box i {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 20px;
-  right: 0;
-  top: 0;
-  opacity: 1;
-  animation: rotate 800ms ease-in;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(-270deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-@media only screen and (min-width: 768px) {
-  /*Page menu*/
-  .header-menu {
-    margin: 0 40px;
-  }
-
-  .header-menu a {
-    padding: 30px 40px 12px 20px;
-  }
-
-  .menu {
-    margin: 0 40px 20px;
-  }
-
-  .menu img {
-    border-radius: 25px 25px 0 0;
-  }
-
-  .menu--background {
-    border-radius: 0 0 25px 25px;
-  }
-
-  .parent:hover > .check-box {
-    width: 7%;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
