--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,25 +1,24 @@
 .btn {
-    max-width: 220px;
-    width: 60%;
-    height: 50px;
-    border:none;
-    border-radius: 50px;
-    color: white;
-    font-size: 0.9rem;
-    font-family:roboto;
-    background: linear-gradient( #ff79da, #9356dc);
-    box-shadow: 1px 1px 8px rgb(209, 208, 208);
-  }
-
-  .home-btn {
-    display: flex;
-    justify-content: center;
-    width: 60%;
-    padding-bottom: 57px;
-  }
-  
-  .page-btn {
-    display: flex;
-    justify-content: center;
-    padding: 10px 0 60px;
-  }
+  width: 220px;
+  height: 50px;
+  border: none;
+  border-radius: 50px;
+  color: white;
+  font-size: 0.9rem;
+  font-family: roboto;
+  background: linear-gradient(#ff79da, #9356dc);
+  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+}
+/* boutton accueil */
+.home-btn {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 57px;
+}
+/* boutton menus */
+.page-btn {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 10px 0 60px;
+}
