--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -3,10 +3,10 @@
   border: 10px solid #f3f3f3;
   width: 200px;
   height: 200px;
-  border-top: 10px solid #9356dc;
-  border-bottom: 10px solid #ff79da;
-  border-right: 10px solid #99e2d0;
-  border-left: 10px solid #99e2d0;
+  border-top: 10px solid $color-primary;
+  border-bottom: 10px solid $color-secondary;
+  border-right: 10px solid $color-tertiary;
+  border-left: 10px solid $color-tertiary;
   border-radius: 50%;
   -webkit-animation: spin 1s linear 5s backwards;
   -o-animation: spin  1s linear 5s backwards;
