--- a/sass/layout/_accueil.scss
+++ b/sass/layout/_accueil.scss
@@ -1,52 +1,48 @@
 body {
-    width: 100%;
-    margin: 0;
-  }
-  
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  header img {
-    padding: 30px 28% 12px;
-    width: 44%;
-    height: 30px;
-  }
-  .localisation {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1em;
-    font-weight: bold;
-    background-color: #eaeaea;
-  }
-  .fa-map-marker-alt {
-    padding-right: 20px;
-  }
-  .search {
-    width: 50%;
-    height: 80%;
-    font-size: 1.3rem;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    background: #eaeaea;
-    border: none;
-  }
-  ::-webkit-input-placeholder {
-    color: black;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: #f6f6f6;
-  }
-  form h1 {
+  width: 100%;
+  margin: 0;
+}
+
+header img {
+  padding: 30px 28% 12px;
+  width: 44%;
+  height: 30px;
+}
+.localisation {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
+  font-weight: bold;
+  background-color: #eaeaea;
+}
+.fa-map-marker-alt {
+  padding-right: 20px;
+}
+.search {
+  width: 50%;
+  height: 80%;
+  font-size: 1.3rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  background: #eaeaea;
+  border: none;
+}
+::-webkit-input-placeholder {
+  color: black;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #f6f6f6;
+
+  & h1 {
     display: flex;
     text-align: center;
     flex-wrap: wrap;
@@ -56,45 +52,45 @@ body {
     margin: 0;
     padding: 43px 0 22px;
   }
-  
-  form p {
+
+  & p {
     display: flex;
     justify-content: center;
-    text-align:center;
+    text-align: center;
     padding: 0 0 34px 39px;
     font-family: roboto;
     font-size: 1rem;
     margin: 0;
   }
-  
-  .btn {
+
+  &.btn {
     height: 50px;
-    border:none;
+    border: none;
     border-radius: 50px;
     color: white;
     font-size: 0.9rem;
-    font-family:roboto;
-    background: linear-gradient( #ff79da, #9356dc);
+    font-family: roboto;
+    background: linear-gradient(45deg,$color-secondary, $color-primary);
     box-shadow: 1px 1px 8px rgb(209, 208, 208);
   }
-  
-  
-  .functioning-filter {
-    display: flex;
-    flex-direction: column;
-    padding: 0 20px;
-  }
-  .functioning-filter h2 {
+}
+
+.functioning-filter {
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+
+  & h2 {
     font-family: roboto;
     padding: 52px 0 32px 0;
     margin: 0;
   }
-  .functioning-filter ol {
+  & ol {
     list-style-type: none;
     padding: 13px;
     margin: 0;
   }
-  ol li::before {
+  & ol li::before {
     position: relative;
     min-width: 25px;
     width: 25px;
@@ -102,14 +98,14 @@ body {
     border-radius: 25px;
     content: "1";
     color: white;
-    background: #9356dc;
+    background: $color-primary;
     display: inline-block;
     display: flex;
     align-items: center;
     justify-content: center;
     left: -11px;
   }
-  .functioning-filter li {
+  & li {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -120,246 +116,247 @@ body {
     margin-bottom: 25px;
     box-shadow: 1px 1px 8px rgb(209, 208, 208);
   }
-  .functioning-filter li:hover {
+  & li:hover {
     background: #f5edff;
   }
-  .functioning-filter i {
+  & i {
     color: #7e7e7e;
   }
-  .functioning-filter li:hover > i {
-    color: #9356dc;
+  & li:hover > i {
+    color: $color-primary;
   }
-  
-  .fa-mobile-alt {
-    font-size: 1.3rem;
-    padding-left: 20px;
-    padding-right: 27px;
+}
+
+.fa-mobile-alt {
+  font-size: 1.3rem;
+  padding-left: 20px;
+  padding-right: 27px;
+}
+.fa-list-ul {
+  font-size: 1.2rem;
+  padding-left: 0;
+  padding-left: 20px;
+  padding-right: 21px;
+}
+.fa-store {
+  font-size: 0.8rem;
+  padding-left: 20px;
+  padding-right: 23px;
+}
+.functioning-filter p {
+  font-family: roboto;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+section {
+  padding: 0 20px 64px;
+  background: #f6f6f6;
+}
+section h2 {
+  font-family: roboto;
+  margin: 0;
+  padding: 59px 0 27px 0;
+}
+.restaurant-prev {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 250px;
+  border-radius: 20px;
+  margin-bottom: 13px;
+  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+}
+.restaurant-prev span {
+  position: absolute;
+  top: 13px;
+  right: 13px;
+  background: #99e2d0;
+  color: #008766;
+  padding: 5px 10px;
+  border-radius: 2.5px;
+}
+.restaurant-prev img {
+  width: 100%;
+  height: 174px;
+  border-radius: 20px 20px 0px 0px;
+  object-fit: cover;
+}
+.restaurant-prev__description {
+  display: flex;
+  flex-direction: column;
+}
+.restaurant-prev__description h3 {
+  font-family: roboto;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 20px 0 6px 15px;
+  margin: 0;
+}
+.restaurant-prev__description p {
+  font-family: roboto;
+  font-size: 1rem;
+  padding-left: 15px;
+  margin: 0;
+}
+.heart-icon {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  padding: 22px 24px 0 0;
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+.heart-icon i {
+  display: flex;
+  align-items: center;
+}
+.heart-empty {
+  display: block;
+  position: relative;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
+.heart-icon .heart-full {
+  display: none;
+  animation: increase 1500ms ease-in-out forwards;
+}
+.heart-icon:hover > .heart-full {
+  display: block;
+  background: linear-gradient(0, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.heart-icon:hover > .heart-empty {
+  display: none;
+}
+@keyframes increase {
+  0% {
+    transform: translateY(0.01em);
+    opacity: 0;
   }
-  .fa-list-ul {
-    font-size: 1.2rem;
-    padding-left: 0;
-    padding-left: 20px;
-    padding-right: 21px;
+  50% {
+    opacity: 0.5;
   }
-  .fa-store {
-    font-size: 0.8rem;
-    padding-left: 20px;
-    padding-right: 23px;
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
-  .functioning-filter p {
-    font-family: roboto;
-    font-size: 0.9rem;
-    font-weight: bold;
+}
+footer {
+  height: 197px;
+  background: #353535;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+footer h2 {
+  font-size: 1rem;
+  font-family: shrikhand;
+  color: white;
+  margin: 0;
+  padding: 26px 0 22px 0;
+}
+.footer__flex {
+  display: flex;
+  flex-direction: row;
+}
+footer i {
+  font-size: 1.25rem;
+  color: white;
+  padding-right: 9px;
+}
+.fa-hands-helping {
+  font-size: 0.9rem;
+}
+
+footer p {
+  font-family: roboto;
+  font-size: 1rem;
+  color: white;
+  margin: 0;
+  padding: 0 0 9px 0;
+}
+footer p a {
+  color: white;
+}
+
+@media only screen and (min-width: 768px) {
+  header img {
+    padding: 30px 0 12px 50px;
+    width: 300px;
+    box-shadow: none;
   }
-  section {
-    padding: 0 20px 64px;
-    background: #f6f6f6;
-  }
-  section h2 {
-    font-family: roboto;
-    margin: 0;
-    padding: 59px 0 27px 0;
-  }
-  .restaurant-prev {
-    position: relative;
+  form {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 250px;
-    border-radius: 20px;
-    margin-bottom: 13px;
-    box-shadow: 1px 1px 8px rgb(209, 208, 208);
+    margin: 0 40px;
   }
-  .restaurant-prev span {
-    position: absolute;
-    top: 13px;
-    right: 13px;
-    background: #99e2d0;
-    color: #008766;
-    padding: 5px 10px;
-    border-radius: 2.5px;
+  .localisation {
+    border-radius: 25px 25px 0 0;
+    box-shadow: none;
   }
-  .restaurant-prev img {
-    width: 100%;
-    height: 174px;
-    border-radius: 20px 20px 0px 0px;
-    object-fit: cover;
+  .search {
+    width: 20%;
   }
-  .restaurant-prev__description {
-    display: flex;
-    flex-direction: column;
+  form {
+    border-radius: 25px;
   }
-  .restaurant-prev__description h3 {
-    font-family: roboto;
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 20px 0 6px 15px;
-    margin: 0;
-  }
-  .restaurant-prev__description p {
-    font-family: roboto;
-    font-size: 1rem;
-    padding-left: 15px;
-    margin: 0;
-  }
-  .heart-icon {
-    position: absolute;
-    right: 0;
-    bottom: 20px;
-    padding: 22px 24px 0 0;
-    font-size: 1.7rem;
-    cursor: pointer;
-  }
-  .heart-icon i {
-    display: flex;
-    align-items: center;
-  }
-  .heart-empty {
-    display: block;
-    position: relative;
-    z-index: 1;
-    top: 0;
-    left: 0;
-  }
-  .heart-icon .heart-full {
-    display: none;
-    animation: increase 1500ms ease-in-out forwards;
-  }
-  .heart-icon:hover > .heart-full {
-    display: block;
-    background: linear-gradient(0, #9356dc, #ff79da);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .heart-icon:hover > .heart-empty {
-    display: none;
-  }
-  @keyframes increase {
-    0% {
-      transform: translateY(0.01em);
-      opacity: 0;
-    }
-    50% {
-      opacity: 0.5;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  footer {
-    height: 197px;
-    background: #353535;
-    padding-left: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-  footer h2 {
-    font-size: 1rem;
-    font-family: shrikhand;
-    color: white;
-    margin: 0;
-    padding: 26px 0 22px 0;
-  }
-  .footer__flex {
-    display: flex;
-    flex-direction: row;
-  }
-  footer i {
-    font-size: 1.25rem;
-    color: white;
-    padding-right: 9px;
-  }
-  .fa-hands-helping {
-    font-size: 0.9rem;
-  }
-  
-  footer p {
-    font-family: roboto;
-    font-size: 1rem;
-    color: white;
-    margin: 0;
-    padding: 0 0 9px 0;
-  }
-  footer p a {
-    color: white;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    header img {
-      padding: 30px 0 12px 50px;
-      width: 300px;
-      box-shadow: none;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      margin: 0 40px;
-    }
-    .localisation {
-      border-radius: 25px 25px 0 0;
-      box-shadow: none;
-    }
-    .search {
-      width: 20%;
-    }
-    form {
-      border-radius: 25px;
-    }
-  
-    .functioning-filter {
-      padding: 0 40px;
-    }
-    .functioning-filter h2 {
+
+  .functioning-filter {
+    padding: 0 40px;
+    & h2 {
       padding: 0;
       padding-top: 20px;
     }
-    .functioning-filter ol {
+    & ol {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
       padding: 0;
       padding-top: 20px;
     }
-    .functioning-filter li {
+    & li {
       width: 320px;
       margin-right: 40px;
       margin-bottom: 0;
     }
-  
-    section {
-      padding: 20px 40px;
-      background: white;
-    }
-    section h2 {
-      padding: 0;
-      padding-bottom: 20px;
-    }
-    article {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      border-radius: 25px;
-      background: #f6f6f6;
-      padding-top: 40px;
-    }
-    .flex-card-tablet-and-desktop {
-      display: flex;
-      flex-direction: row;
-      padding: 0 40px 40px;
-    }
-    .flex-card {
-      width: 100%;
-      padding-right: 40px;
-    }
-    .restaurant-prev {
-      margin: 0;
-    }
-  
-    footer {
-      margin: 0 40px 40px;
-      background: #353535;
-      border-radius: 25px;
-    }
   }
+
+  section {
+    padding: 20px 40px;
+    background: white;
+  }
+  section h2 {
+    padding: 0;
+    padding-bottom: 20px;
+  }
+  article {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 25px;
+    background: #f6f6f6;
+    padding-top: 40px;
+  }
+  .flex-card-tablet-and-desktop {
+    display: flex;
+    flex-direction: row;
+    padding: 0 40px 40px;
+  }
+  .flex-card {
+    width: 100%;
+    padding-right: 40px;
+  }
+  .restaurant-prev {
+    margin: 0;
+  }
+
+  footer {
+    margin: 0 40px 40px;
+    background: #353535;
+    border-radius: 25px;
+  }
+}
