--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,5 @@
+@import "./utils/variables";
 @import "./components/loader";
 @import "./components/button";
 @import "./layout/accueil";
-
-
-
 @import "./pages/menu";
