--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,6 +206,11 @@ form.btn {
 .functioning-filter li:hover > i {
   color: #9356dc;
 }
+.functioning-filter p {
+  font-family: roboto;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
 
 .fa-mobile-alt {
   font-size: 1.3rem;
@@ -226,17 +231,10 @@ form.btn {
   padding-right: 23px;
 }
 
-.functioning-filter p {
-  font-family: roboto;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
 section {
   padding: 0 20px 64px;
   background: #f6f6f6;
 }
-
 section h2 {
   font-family: roboto;
   margin: 0;
@@ -253,7 +251,6 @@ section h2 {
   margin-bottom: 13px;
   box-shadow: 1px 1px 8px #d1d0d0;
 }
-
 .restaurant-prev span {
   position: absolute;
   top: 13px;
@@ -263,7 +260,6 @@ section h2 {
   padding: 5px 10px;
   border-radius: 2.5px;
 }
-
 .restaurant-prev img {
   width: 100%;
   height: 174px;
@@ -275,7 +271,6 @@ section h2 {
   display: flex;
   flex-direction: column;
 }
-
 .restaurant-prev__description h3 {
   font-family: roboto;
   font-size: 1rem;
@@ -283,7 +278,6 @@ section h2 {
   padding: 20px 0 6px 15px;
   margin: 0;
 }
-
 .restaurant-prev__description p {
   font-family: roboto;
   font-size: 1rem;
@@ -299,20 +293,17 @@ section h2 {
   font-size: 1.7rem;
   cursor: pointer;
 }
-
 .heart-icon i {
   display: flex;
   align-items: center;
 }
-
-.heart-empty {
+.heart-icon.heart-empty {
   display: block;
   position: relative;
   z-index: 1;
   top: 0;
   left: 0;
 }
-
 .heart-icon .heart-full {
   display: none;
   animation: increase 1500ms ease-in-out forwards;
@@ -350,7 +341,6 @@ footer {
   display: flex;
   flex-direction: column;
 }
-
 footer h2 {
   font-size: 1rem;
   font-family: shrikhand;
@@ -358,22 +348,11 @@ footer h2 {
   margin: 0;
   padding: 26px 0 22px 0;
 }
-
-.footer__flex {
-  display: flex;
-  flex-direction: row;
-}
-
 footer i {
   font-size: 1.25rem;
   color: white;
   padding-right: 9px;
 }
-
-.fa-hands-helping {
-  font-size: 0.9rem;
-}
-
 footer p {
   font-family: roboto;
   font-size: 1rem;
@@ -381,9 +360,17 @@ footer p {
   margin: 0;
   padding: 0 0 9px 0;
 }
-
 footer p a {
   color: white;
+}
+
+.footer__flex {
+  display: flex;
+  flex-direction: row;
+}
+
+.fa-hands-helping {
+  font-size: 0.8rem;
 }
 
 @media only screen and (min-width: 768px) {
@@ -397,6 +384,7 @@ footer p a {
     display: flex;
     flex-direction: column;
     margin: 0 40px;
+    border-radius: 25px;
   }
 
   .localisation {
@@ -406,10 +394,6 @@ footer p a {
 
   .search {
     width: 20%;
-  }
-
-  form {
-    border-radius: 25px;
   }
 
   .functioning-filter {
@@ -436,13 +420,11 @@ footer p a {
     padding: 20px 40px;
     background: white;
   }
-
   section h2 {
     padding: 0;
     padding-bottom: 20px;
   }
-
-  article {
+  section article {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -614,6 +596,17 @@ footer p a {
   top: 0;
   animation: slideleft 0.8s ease-in-out forwards;
 }
+.check-box i {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  right: 0;
+  top: 0;
+  opacity: 1;
+  animation: rotate 800ms ease-in;
+}
 
 .parent:hover > .check-box {
   display: block;
@@ -642,18 +635,6 @@ footer p a {
     opacity: 1;
   }
 }
-.check-box i {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 20px;
-  right: 0;
-  top: 0;
-  opacity: 1;
-  animation: rotate 800ms ease-in;
-}
-
 @keyframes rotate {
   0% {
     transform: rotate(-270deg);
