--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,6 +306,8 @@ section h2 {
 }
 .heart-icon .heart-full {
   display: none;
+  -webkit-animation: increase 1500ms ease-in-out forwards;
+  -o-animation: increase 1500ms ease-in-out forwards;
   animation: increase 1500ms ease-in-out forwards;
 }
 
@@ -321,19 +323,6 @@ section h2 {
   display: none;
 }
 
-@keyframes increase {
-  0% {
-    transform: translateY(0.01em);
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 footer {
   height: 197px;
   background: #353535;
@@ -510,16 +499,6 @@ footer p a {
   animation: slidedown 1s ease-in-out forwards;
 }
 
-@keyframes slidedown {
-  from {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 .menu-list h2 {
   width: 13%;
   font-family: roboto;
@@ -594,6 +573,8 @@ footer p a {
   border-radius: 0 15px 15px 0;
   right: 0;
   top: 0;
+  -webkit-animation: slideleft 0.8s ease-in-out forwards;
+  -o-animation: slideleft 0.8s ease-in-out forwards;
   animation: slideleft 0.8s ease-in-out forwards;
 }
 .check-box i {
@@ -605,6 +586,8 @@ footer p a {
   right: 0;
   top: 0;
   opacity: 1;
+  -webkit-animation: rotate 800ms ease-in;
+  -o-animation: rotate 800ms ease-in;
   animation: rotate 800ms ease-in;
 }
 
@@ -625,24 +608,6 @@ footer p a {
   text-overflow: ellipsis;
 }
 
-@keyframes slideleft {
-  from {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-@keyframes rotate {
-  0% {
-    transform: rotate(-270deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
 @media only screen and (min-width: 768px) {
   /*Page menu*/
   .header-menu {
@@ -665,6 +630,50 @@ footer p a {
 
   .parent:hover > .check-box {
     width: 7%;
+  }
+}
+/* animation du coeur */
+@keyframes increase {
+  0% {
+    transform: translateY(0.01em);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+/* animation apparition des menus */
+@keyframes slidedown {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+/* animation de la coche des plats */
+@keyframes slideleft {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
 
