--- a/sass/layout/_accueil.scss
+++ b/sass/layout/_accueil.scss
@@ -206,9 +206,8 @@ section {
 
 .heart-icon {
   position: absolute;
-  right: 0;
+  right: 24px;
   bottom: 20px;
-  padding: 22px 24px 0 0;
   font-size: 1.7rem;
   cursor: pointer;
   & i {
