--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,9 +287,8 @@ section h2 {
 
 .heart-icon {
   position: absolute;
-  right: 0;
+  right: 24px;
   bottom: 20px;
-  padding: 22px 24px 0 0;
   font-size: 1.7rem;
   cursor: pointer;
 }
@@ -484,15 +483,38 @@ footer p a {
   margin: 0;
 }
 
-.heart--size {
-  height: 50%;
-  padding: 0 37px 0px 0;
+.heart-menu {
+  position: absolute;
+  top: 35px;
+  right: 25px;
   font-size: 1.7rem;
 }
+.heart-menu i {
+  display: flex;
+  align-items: center;
+}
+.heart-menu .heart-empty {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+.heart-menu .heart-full {
+  display: none;
+  -webkit-animation: increase 1500ms ease-in-out forwards;
+  -o-animation: increase 1500ms ease-in-out forwards;
+  animation: increase 1500ms ease-in-out forwards;
+}
 
-.menu i {
-  width: 100%;
-  height: 100%;
+.heart-menu:hover > .heart-full {
+  display: block;
+  background: linear-gradient(0, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.heart-menu:hover > .heart-empty {
+  display: none;
 }
 
 .menu-list {
