--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -35,15 +35,41 @@
   padding: 0 0 35px 19px;
   margin: 0;
 }
-.heart--size {
-  height: 50%;
-  padding: 0 37px 0px 0;
+.heart-menu {
+  position: absolute;
+  top: 35px;
+  right: 25px;
   font-size: 1.7rem;
+
+  & i {
+    display: flex;
+    align-items: center;
+  }
+  & .heart-empty {
+    display: block;
+    position: relative;
+    z-index: 1;
+  }
+  & .heart-full {
+    display: none;
+    -webkit-animation: increase 1500ms ease-in-out forwards;
+    -o-animation: increase 1500ms ease-in-out forwards;
+    animation: increase 1500ms ease-in-out forwards;
+  }
 }
-.menu i {
-  width: 100%;
-  height: 100%;
+
+.heart-menu:hover > .heart-full {
+  display: block;
+  background: linear-gradient(0, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+.heart-menu:hover > .heart-empty {
+  display: none;
+}
+
+
 .menu-list {
   animation: slidedown 1s ease-in-out forwards;
 }
@@ -133,7 +159,7 @@
     right: 0;
     top: 0;
     opacity: 1;
-    -webkit-animation:rotate 800ms ease-in ;
+    -webkit-animation: rotate 800ms ease-in;
     -o-animation: rotate 800ms ease-in;
     animation: rotate 800ms ease-in;
   }
@@ -153,8 +179,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-
 
 @media only screen and (min-width: 768px) {
   /*Page menu*/
