--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,25 +4,31 @@ a {
   color: black;
 }
 
+.background-loader {
+  position: fixed;
+  z-index: 13;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  -webkit-animation: fixloader 3s linear;
+  -o-animation: fixloader 3s linear;
+  animation: fixloader 3s linear;
+  animation-fill-mode: forwards;
+}
+
 .loader {
   /* création loader */
   border: 10px solid #f3f3f3;
   width: 200px;
   height: 200px;
-  border-top: 10px solid #9356dc;
-  border-bottom: 10px solid #ff79da;
-  border-right: 10px solid #99e2d0;
-  border-left: 10px solid #99e2d0;
   border-radius: 50%;
-  -webkit-animation: spin 1s linear 5s backwards;
-  -o-animation: spin 1s linear 5s backwards;
-  animation: spin 1s linear 5s backwards;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
-  background-color: white;
-  opacity: 0;
+  -webkit-animation: spin 3s linear;
+  -o-animation: spin 3s linear;
+  animation: spin 3s linear;
+  animation-fill-mode: both;
   /* positionnement loader */
   margin: auto;
   position: absolute;
@@ -32,25 +38,12 @@ a {
   bottom: 0;
 }
 
-/* animation loader */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 1;
-  }
+.welcome {
+  color: #9356dc;
+  font-family: roboto;
+  font-size: 1.7rem;
 }
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-  }
-}
+
 .btn {
   width: 220px;
   height: 50px;
@@ -696,6 +689,70 @@ footer p a {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+/* animation loader */
+@keyframes spin {
+  0% {
+    border-top: 10px solid #9356dc;
+    border-right: 10px solid #99e2d0;
+    border-bottom: 10px solid #ff79da;
+    border-left: 10px solid #99e2d0;
+  }
+  13% {
+    border-top: 10px solid #99e2d0;
+    border-right: 10px solid #9356dc;
+    border-bottom: 10px solid #99e2d0;
+    border-left: 10px solid #ff79da;
+  }
+  25% {
+    border-top: 10px solid #ff79da;
+    border-right: 10px solid #99e2d0;
+    border-bottom: 10px solid #9356dc;
+    border-left: 10px solid #99e2d0;
+  }
+  50% {
+    border-top: 10px solid #99e2d0;
+    border-right: 10px solid #ff79da;
+    border-bottom: 10px solid #99e2d0;
+    border-left: 10px solid #9356dc;
+  }
+  62% {
+    border-top: 10px solid #9356dc;
+    border-right: 10px solid #99e2d0;
+    border-bottom: 10px solid #ff79da;
+    border-left: 10px solid #99e2d0;
+  }
+  75% {
+    border-top: 10px solid #99e2d0;
+    border-right: 10px solid #9356dc;
+    border-bottom: 10px solid #99e2d0;
+    border-left: 10px solid #ff79da;
+  }
+  88% {
+    border-top: 10px solid #ff79da;
+    border-right: 10px solid #99e2d0;
+    border-bottom: 10px solid #9356dc;
+    border-left: 10px solid #99e2d0;
+  }
+  100% {
+    border-top: 10px solid #99e2d0;
+    border-right: 10px solid #ff79da;
+    border-bottom: 10px solid #99e2d0;
+    border-left: 10px solid #9356dc;
+  }
+}
+/* animation background du loader opacité */
+@keyframes fixloader {
+  0% {
+    opacity: 1;
+  }
+  98% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
   }
 }
 
