--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,22 +1,29 @@
+.background-loader {
+  position: fixed;
+  z-index: 13;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  -webkit-animation: fixloader 3s linear;
+  -o-animation: fixloader 3s linear;
+  animation: fixloader 3s linear;
+  animation-fill-mode: forwards;
+}
+
 .loader {
   /* création loader */
   border: 10px solid #f3f3f3;
   width: 200px;
   height: 200px;
-  border-top: 10px solid $color-primary;
-  border-bottom: 10px solid $color-secondary;
-  border-right: 10px solid $color-tertiary;
-  border-left: 10px solid $color-tertiary;
   border-radius: 50%;
-  -webkit-animation: spin 1s linear 5s backwards;
-  -o-animation: spin  1s linear 5s backwards;
-  animation: spin 1s linear 5s backwards;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
-  background-color: white;
-  opacity: 0;
+  -webkit-animation: spin 3s linear;
+  -o-animation: spin 3s linear;
+  animation: spin 3s linear;
+  animation-fill-mode: both;
+  
 
   /* positionnement loader */
   margin: auto;
@@ -27,24 +34,8 @@
   bottom: 0;
 }
 
-/* animation loader */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 1;
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    opacity: 1;
-  }
-}
 .welcome {
+  color: $color-primary;
+  font-family: roboto;
+  font-size: 1.7rem;
 }
