--- a/sass/layout/_accueil.scss
+++ b/sass/layout/_accueil.scss
@@ -40,7 +40,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #f6f6f6;
+  background: $color-background;
 
   & h1 {
     display: flex;
@@ -69,7 +69,7 @@ form {
     font-size: 0.9rem;
     font-family: roboto;
     background: linear-gradient(45deg, $color-secondary, $color-primary);
-    box-shadow: 1px 1px 8px rgb(209, 208, 208);
+    @include box-shadow;
   }
 }
 
@@ -107,12 +107,12 @@ form {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: #f6f6f6;
+    background: $color-background;
     max-width: 334px;
     height: 75px;
     border-radius: 20px;
     margin-bottom: 25px;
-    box-shadow: 1px 1px 8px rgb(209, 208, 208);
+    @include box-shadow;
   }
   & li:hover {
     background: #f5edff;
@@ -149,7 +149,7 @@ form {
 
 section {
   padding: 0 20px 64px;
-  background: #f6f6f6;
+  background: $color-background;
 
   & h2 {
     font-family: roboto;
@@ -166,13 +166,13 @@ section {
   height: 250px;
   border-radius: 20px;
   margin-bottom: 13px;
-  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+  @include box-shadow;
 
   & span {
     position: absolute;
     top: 13px;
     right: 13px;
-    background: #99e2d0;
+    background: $color-tertiary;
     color: #008766;
     padding: 5px 10px;
     border-radius: 2.5px;
@@ -333,7 +333,7 @@ footer {
       flex-direction: row;
       flex-wrap: wrap;
       border-radius: 25px;
-      background: #f6f6f6;
+      background: $color-background;
       padding-top: 40px;
     }
   }
