--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -17,7 +17,7 @@
   position: relative;
   margin-top: -47px;
   border-radius: 50px 42px 0 0;
-  background: #f6f6f6;
+  background: $color-background;
 }
 .menu img {
   width: 100%;
@@ -88,7 +88,7 @@
   padding-bottom: 8px;
   margin: 0;
   margin-left: 20px;
-  border-bottom: 2px solid #99e2d0;
+  border-bottom: 2px solid $color-tertiary;
 }
 .menu-list ul {
   list-style-type: none;
@@ -107,7 +107,7 @@
   margin-bottom: 15px;
   overflow: hidden;
   cursor: pointer;
-  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+  @include box-shadow;
 }
 
 .menu-list__description {
@@ -147,7 +147,7 @@
 }
 .check-box {
   display: none;
-  background-color: #99e2d0;
+  background-color: $color-tertiary;
   height: 68px;
   border-radius: 0 15px 15px 0;
   right: 0;
@@ -202,7 +202,7 @@
       border-radius: 25px 25px 0 0;
     }
   }
-  
+
   .menu--background {
     border-radius: 0 0 25px 25px;
   }
