--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,3 +1,9 @@
 @mixin box-shadow {
     box-shadow: 1px 1px 8px rgb(209, 208, 208);
 }
+@mixin font-title {
+    font-family: shrikhand;
+}
+@mixin font-text {
+    font-family: roboto;
+}
