--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./components/icons.scss";
 @import "./components/loader";
 @import "./components/button";
 @import "./layout/accueil";
