--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,9 @@
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
+$color-quaternary: #fff;
 $color-background: #f6f6f6;
+
 
 a {
   text-decoration: none;
