--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,12 +2,19 @@
   width: 220px;
   height: 50px;
   border: none;
+  outline: none;
   border-radius: 50px;
   color: white;
   font-size: 0.9rem;
   font-family: roboto;
   background: linear-gradient(#ff79da, #9356dc);
   box-shadow: 1px 1px 8px rgb(209, 208, 208);
+  &:hover {
+    cursor: pointer;
+  }
+  &:active {
+    border: none;
+  }
 }
 /* boutton accueil */
 .home-btn {
