--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -86,6 +86,9 @@
   padding-bottom: 8px;
   margin: 0;
   margin-left: 20px;
+}
+.border {
+  padding-bottom: 8px;
   border-bottom: 2px solid $color-tertiary;
 }
 .menu-list ul {
