--- a/public/css/style.css
+++ b/public/css/style.css
@@ -533,6 +533,10 @@ footer p a {
   padding-bottom: 8px;
   margin: 0;
   margin-left: 20px;
+}
+
+.border {
+  padding-bottom: 8px;
   border-bottom: 2px solid #99e2d0;
 }
 
