--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,14 +6,16 @@
   border-radius: 50px;
   color: white;
   font-size: 0.9rem;
-  font-family: roboto;
-  background: linear-gradient(#ff79da, #9356dc);
-  box-shadow: 1px 1px 8px rgb(209, 208, 208);
+  @include font-text;
+  background: linear-gradient($color-secondary, $color-primary);
+  @include box-shadow;
   &:hover {
     cursor: pointer;
-  }
-  &:active {
-    border: none;
+    background: linear-gradient(
+      $color-secondary-lighter,
+      $color-primary-lighter
+    );
+    box-shadow: 10px 10px 5px rgb(209, 208, 208);
   }
 }
 /* boutton accueil */
