--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,5 +1,7 @@
 $color-primary: #9356dc;
+$color-primary-lighter: lighten($color-primary, 5%);
 $color-secondary: #ff79da;
+$color-secondary-lighter: lighten($color-secondary, 5%);
 $color-tertiary: #99e2d0;
 $color-quaternary: #fff;
 $color-background: #f6f6f6;
