--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,7 +348,7 @@ footer p a {
   flex-direction: row;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (min-width: 1224px) {
   header img {
     padding: 30px 0 12px 50px;
     width: 300px;
@@ -409,6 +409,7 @@ footer p a {
   }
 
   .flex-card-tablet-and-desktop {
+    width: 100%;
     display: flex;
     flex-direction: row;
     padding: 0 40px 40px;
