--- a/sass/layout/_accueil.scss
+++ b/sass/layout/_accueil.scss
@@ -245,7 +245,7 @@ footer {
   flex-direction: row;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (min-width: 1224px){
   header img {
     padding: 30px 0 12px 50px;
     width: 300px;
@@ -303,6 +303,7 @@ footer {
     }
   }
   .flex-card-tablet-and-desktop {
+    width: 100%;
     display: flex;
     flex-direction: row;
     padding: 0 40px 40px;
